--- a/tests/e2e/lba_procedures/workloads.yaml
+++ b/tests/e2e/lba_procedures/workloads.yaml
@@ -1,23 +1,15 @@
-template_cluster: &template_cluster
+read_query_modules_cluster: &read_query_modules_cluster
   cluster:
     main:
       args: ["--bolt-port", "7687", "--log-level=TRACE"]
       log_file: "lba-e2e.log"
-      setup_queries: [
-        "Create (:Label1 {id: 1}) ;",
-        "Create (:Label1 {id: 2}) ;",
-        "Create (:Label1 {id: 3}) ;",
-        "Create (:Label1 {id: 4}) ;",
-        "Create (:Label1 {id: 5}) ;",
-        "Create (:Label1 {id: 6}) ;",
-        "Create (:Label2 {id: 1}) ;",
-        "Create (:Label2 {id: 2}) ;",
-        "Create (:Label2 {id: 3}) ;",
-        "Create (:Label2 {id: 4}) ;",
-        "Create User Josip ;",
-        "Create User Boris ;",
-        "Grant Read On Labels :Label1 to Boris;",
-      ]
+      setup_queries:
+        [
+          "CREATE USER admin IDENTIFIED BY 'test';",
+          "GRANT ALL PRIVILEGES TO admin",
+          "CREATE USER user IDENTIFIED BY 'test';",
+          "GRANT ALL PRIVILEGES TO user",
+        ]
       validation_queries: []
 
 show_privileges_cluster: &show_privileges_cluster
@@ -58,11 +50,11 @@ show_privileges_cluster: &show_privileges_cluster
       ]
 
 workloads:
-  - name: "Label-based auth"
+  - name: "read-query-modules"
     binary: "tests/e2e/pytest_runner.sh"
     proc: "tests/e2e/lba_procedures/procedures/"
-    args: ["lba_procedures/lba_procedures.py"]
-    <<: *template_cluster
+    args: ["lba_procedures/read_query_modules.py"]
+    <<: *read_query_modules_cluster
 
   - name: "show-privileges"
     binary: "tests/e2e/pytest_runner.sh"
