--- a/tests/e2e/fine_grained_access/workloads.yaml
+++ b/tests/e2e/fine_grained_access/workloads.yaml
@@ -1,4 +1,17 @@
 bolt_port: &bolt_port "7687"
+create_delete_filtering_cluster: &create_delete_filtering_cluster
+  cluster:
+    main:
+      args: ["--bolt-port", "7687", "--log-level=TRACE"]
+      log_file: "fine_grained_access.log"
+      setup_queries:
+        [
+          "CREATE USER admin IDENTIFIED BY 'test';",
+          "CREATE USER user IDENTIFIED BY 'test';",
+          "GRANT ALL PRIVILEGES TO admin;",
+          "GRANT ALL PRIVILEGES TO user;",
+        ]
+
 edge_type_filtering_cluster: &edge_type_filtering_cluster
   cluster:
     main:
@@ -10,6 +23,8 @@ edge_type_filtering_cluster: &edge_type_filtering_cluster
           "CREATE USER user IDENTIFIED BY 'test';",
           "GRANT ALL PRIVILEGES TO admin;",
           "GRANT ALL PRIVILEGES TO user;",
+          "GRANT CREATE_DELETE ON LABELS * TO admin;",
+          "GRANT CREATE_DELETE ON EDGE_TYPES * TO admin;",
           "MERGE (l1:label1 {name: 'test1'});",
           "MERGE (l2:label2  {name: 'test2'});",
           "MATCH (l1:label1),(l2:label2) WHERE l1.name = 'test1' AND l2.name = 'test2' CREATE (l1)-[r:edgeType1]->(l2);",
@@ -44,11 +59,15 @@ path_filtering_cluster: &path_filtering_cluster
         ]
 
 workloads:
+  - name: "Create delete filtering"
+    binary: "tests/e2e/pytest_runner.sh"
+    args: ["fine_grained_access/create_delete_filtering_tests.py"]
+    <<: *create_delete_filtering_cluster
+
   - name: "EdgeType filtering"
     binary: "tests/e2e/pytest_runner.sh"
     args: ["fine_grained_access/edge_type_filtering_tests.py"]
     <<: *edge_type_filtering_cluster
-
   - name: "Path filtering"
     binary: "tests/e2e/pytest_runner.sh"
     args: ["fine_grained_access/path_filtering_tests.py"]
