--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -391,10 +391,14 @@ add_custom_target(test_lcp ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/test_lcp)
 add_test(test_lcp ${CMAKE_CURRENT_BINARY_DIR}/test_lcp)
 add_dependencies(memgraph__unit test_lcp)
 
-# Test future
+# Test Future
 add_unit_test(future.cpp)
 target_link_libraries(${test_prefix}future mg-io)
 
-# Test Local Transport
+# Test LocalTransport
 add_unit_test(local_transport.cpp)
 target_link_libraries(${test_prefix}local_transport mg-io)
+
+# Test MachineManager with LocalTransport
+add_unit_test(machine_manager.cpp)
+target_link_libraries(${test_prefix}machine_manager mg-io)
