--- a/tests/e2e/lba_procedures/workloads.yaml
+++ b/tests/e2e/lba_procedures/workloads.yaml
@@ -19,18 +19,6 @@ template_cluster: &template_cluster
         - "Grant Read On Labels :Label1 to Boris;"
       validation_queries: []
 
-read_permission_queries: &read_permission_queries
-  cluster:
-    main:
-      args: ["--bolt-port", "7687", "--log-level=TRACE"]
-      log_file: "lba-e2e.log"
-      setup_queries:
-        - "CREATE USER admin IDENTIFIED BY 'test';"
-        - "GRANT ALL PRIVILEGES TO admin;"
-        - "CREATE USER user IDENTIFIED BY 'test';"
-        - "GRANT ALL PRIVILEGES TO user;"
-      validation_queries: []
-
 show_privileges_cluster: &show_privileges_cluster
   cluster:
     main:
@@ -67,6 +55,17 @@ show_privileges_cluster: &show_privileges_cluster
         - "Grant Auth to Bruno;"
         - "Deny Create_Delete On Labels * to Bruno"
 
+read_permission_queries: &read_permission_queries
+  cluster:
+    main:
+      args: ["--bolt-port", "7687", "--log-level=TRACE"]
+      log_file: "lba-e2e.log"
+      setup_queries:
+        - "CREATE USER admin IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO admin;"
+        - "CREATE USER user IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO user;"
+      validation_queries: []
 
 update_permission_queries_cluster: &update_permission_queries_cluster
   cluster:
@@ -84,7 +83,7 @@ update_permission_queries_cluster: &update_permission_queries_cluster
 workloads:
   - name: "Label-based auth"
     binary: "tests/e2e/pytest_runner.sh"
-    proc: "tests/e2e/lba_procedures/procedures/"
+    proc: "tests/e2e/7/procedures/"
     args: ["lba_procedures/lba_procedures.py"]
     <<: *template_cluster
 
