--- a/tests/e2e/lba_procedures/CMakeLists.txt
+++ b/tests/e2e/lba_procedures/CMakeLists.txt
@@ -6,5 +6,7 @@ copy_lba_procedures_e2e_python_files(common.py)
 copy_lba_procedures_e2e_python_files(lba_procedures.py)
 copy_lba_procedures_e2e_python_files(show_privileges.py)
 copy_lba_procedures_e2e_python_files(read_permission_queries.py)
+copy_lba_procedures_e2e_python_files(update_permission_queries.py)
+
 
 add_subdirectory(procedures)
