--- a/tests/simulation/CMakeLists.txt
+++ b/tests/simulation/CMakeLists.txt
@@ -33,4 +33,4 @@ add_simulation_test(trial_query_storage/query_storage_test.cpp address)
 
 add_simulation_test(sharded_map.cpp address)
 
-add_simulation_test(middleware.cpp address)
+add_simulation_test(shard_request_manager.cpp address)
