--- a/src/storage/v3/CMakeLists.txt
+++ b/src/storage/v3/CMakeLists.txt
@@ -1,4 +1,11 @@
+define_add_lcp(add_storage_ast lcp_storage_v3_cpp_files generated_lcp_storage_v3_files)
+
+add_storage_ast(bindings/ast/ast.lcp)
+
+add_custom_target(generate_lcp_ast_storage_v3 DEPENDS ${generated_lcp_storage_v3_files})
+
 set(storage_v3_src_files
+    ${lcp_storage_v3_cpp_files}
     commit_log.cpp
     constraints.cpp
     temporal.cpp
@@ -38,6 +45,7 @@ find_package(gflags REQUIRED)
 find_package(Threads REQUIRED)
 
 add_library(mg-storage-v3 STATIC ${storage_v3_src_files})
+add_dependencies(mg-storage-v3 generate_lcp_ast_storage_v3)
 target_link_libraries(mg-storage-v3 Threads::Threads mg-utils gflags)
 target_include_directories(mg-storage-v3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/bindings)
 
